# python-observabilityclient

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: api.rst  conf.py  index.rst  installation.rst  shell.rst
observabilityclient/: plugin.py  prometheus_client.py  rbac.py
observabilityclient/tests/functional/: base.py  test_cli.py
observabilityclient/tests/unit/: test_cli.py  test_prometheus_client.py  test_python_api.py  test_rbac.py  test_utils.py
observabilityclient/utils/: metric_utils.py  runner.py  shell.py  strings.py
observabilityclient/v1/: base.py  cli.py  client.py  deploy.py  python_api.py  rbac.py
releasenotes/source/: index.rst
