[metadata]
name = python-observabilityclient
summary = OpenStack Observability Client
description_file =
    README.md
license = Apache License, Version 2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://infrawatch.github.io/documentation/
python_requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Environment :: Infrawatch
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    observabilityclient

[entry_points]
openstack.cli.extension =
    observabilityclient = observabilityclient.plugin

openstack.observabilityclient.v1 =
    metric_list = observabilityclient.v1.cli:List
    metric_show = observabilityclient.v1.cli:Show
    metric_query = observabilityclient.v1.cli:Query
    metric_delete = observabilityclient.v1.cli:Delete
    metric_clean-tombstones = observabilityclient.v1.cli:CleanTombstones
    metric_snapshot = observabilityclient.v1.cli:Snapshot


[flake8]
show-source = True
builtins = _
exclude =
    .venv,
    .git,
    dist
